fixed video on mobile 004

--- a/includes/css/custom.scss
+++ b/includes/css/custom.scss
@@ -28,6 +28,14 @@
 	width: 50px;
 	top: 30px;
 	right: 20px;
+	display: none;
+}
+
+.show_close {
+	.video_close_button {
+		display: block !important;
+	}
+	
 }
 
 /*Shadow on philo*/
